testsuite/tests/overloadedlists/should_fail/overloadedlistsfail06.hs
{-# LANGUAGE OverloadedLists, RebindableSyntax #-}

f [] = []
f x = x
