testsuite/tests/overloadedlists/should_fail/overloadedlistsfail06.stderr
overloadedlistsfail06.hs:3:3: Not in scope: ‘fromListN’

overloadedlistsfail06.hs:3:3: error: Not in scope: ‘toList’

overloadedlistsfail06.hs:3:8: error: Not in scope: ‘fromListN’
